Fix labels not showing with themes

--- a/src/app.css
+++ b/src/app.css
@@ -38,4 +38,5 @@
 .spicetify-playlist-labels-label-container button svg {
     padding: 1px;
     vertical-align: top;
+    fill: white;
 }
